--- a/article4.html
+++ b/article4.html
@@ -5,6 +5,74 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Фінансова подушка</title>
   <link rel="stylesheet" href="style.css">
+  <style>
+    body {
+      margin: 0;
+      font-family: Arial, sans-serif;
+      background-color: #0f2027;
+      color: #f5f5f5;
+      line-height: 1.6;
+    }
+
+    .container {
+      max-width: 900px;
+      margin: 0 auto;
+      padding: 20px;
+    }
+
+    header {
+      text-align: center;
+      padding: 20px 0;
+    }
+
+    header h1 {
+      font-size: 2.5rem;
+      margin-bottom: 10px;
+    }
+
+    nav a {
+      display: inline-block;
+      padding: 10px 20px;
+      background: #28a745;
+      color: white;
+      text-decoration: none;
+      border-radius: 5px;
+      font-weight: bold;
+      transition: background 0.3s;
+    }
+
+    nav a:hover {
+      background: #218838;
+    }
+
+    article img {
+      width: 100%;
+      max-height: 300px;
+      object-fit: cover;
+      border-radius: 10px;
+      margin-bottom: 20px;
+    }
+
+    article {
+      background: #1b2a2f;
+      padding: 20px;
+      border-radius: 10px;
+    }
+
+    h2 {
+      text-align: center;
+      color: #fff;
+      margin-bottom: 20px;
+    }
+
+    ul {
+      padding-left: 20px;
+    }
+
+    li {
+      margin-bottom: 10px;
+    }
+  </style>
 </head>
 <body>
   <div class="container">
@@ -12,17 +80,23 @@
       <h1>Фінансова подушка</h1>
       <nav><a href="index.html">🏠 На головну</a></nav>
     </header>
+
     <main>
       <article>
-        <img src="https://images.unsplash.com/photo-1581091012184-5c1d4b0f3b9f" alt="Фінансова подушка">
-        <p>Фінансова подушка — це резерв коштів на випадок непередбачуваних ситуацій, який дає спокій та впевненість.</p>
+        <img src="EC097F48-445A-4801-8D37-28EF688FF1ED.jpeg" alt="Фінансова подушка">
+        <p>
+          Фінансова подушка — це ваш захисний резерв на випадок непередбачених ситуацій. Вона допомагає уникнути стресу та зберегти стабільність навіть у складні часи.
+        </p>
+        <h2>Ключові поради</h2>
         <ul>
-          <li>💵 Відкладайте мінімум 10% доходу щомісяця</li>
-          <li>🏦 Тримайте гроші на окремому рахунку</li>
-          <li>📆 Мета — накопичити суму на 3-6 місяців життя</li>
-          <li>🔒 Зберігайте подушку в надійному банку чи інструменті</li>
+          <li>💰 Відкладай щонайменше 10-20% доходу щомісяця.</li>
+          <li>🏦 Зберігай гроші на окремому рахунку або депозиті.</li>
+          <li>📅 Мета — накопичити суму, що покриває витрати на 3-6 місяців життя.</li>
+          <li>📈 Використовуй подушку тільки для критичних випадків.</li>
         </ul>
-        <p>Фінансова подушка — ваш головний захист у кризових обставинах.</p>
+        <p>
+          Наявність фінансової подушки робить вас упевненішим у завтрашньому дні і дозволяє приймати розумні фінансові рішення.
+        </p>
       </article>
     </main>
   </div>
