--- a/article4.html
+++ b/article4.html
@@ -5,74 +5,6 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Фінансова подушка</title>
   <link rel="stylesheet" href="style.css">
-  <style>
-    body {
-      margin: 0;
-      font-family: Arial, sans-serif;
-      background-color: #0f2027;
-      color: #f5f5f5;
-      line-height: 1.6;
-    }
-
-    .container {
-      max-width: 900px;
-      margin: 0 auto;
-      padding: 20px;
-    }
-
-    header {
-      text-align: center;
-      padding: 20px 0;
-    }
-
-    header h1 {
-      font-size: 2.5rem;
-      margin-bottom: 10px;
-    }
-
-    nav a {
-      display: inline-block;
-      padding: 10px 20px;
-      background: #28a745;
-      color: white;
-      text-decoration: none;
-      border-radius: 5px;
-      font-weight: bold;
-      transition: background 0.3s;
-    }
-
-    nav a:hover {
-      background: #218838;
-    }
-
-    article img {
-      width: 100%;
-      max-height: 300px;
-      object-fit: cover;
-      border-radius: 10px;
-      margin-bottom: 20px;
-    }
-
-    article {
-      background: #1b2a2f;
-      padding: 20px;
-      border-radius: 10px;
-    }
-
-    h2 {
-      text-align: center;
-      color: #fff;
-      margin-bottom: 20px;
-    }
-
-    ul {
-      padding-left: 20px;
-    }
-
-    li {
-      margin-bottom: 10px;
-    }
-  </style>
 </head>
 <body>
   <div class="container">
@@ -83,22 +15,23 @@
 
     <main>
       <article>
-        <img src="EC097F48-445A-4801-8D37-28EF688FF1ED.jpeg" alt="Фінансова подушка">
+        <img src="https://images.unsplash.com/photo-1580519542036-c47de6196ba5?q=80&w=1200" alt="Фінансова подушка">
         <p>
-          Фінансова подушка — це ваш захисний резерв на випадок непередбачених ситуацій. Вона допомагає уникнути стресу та зберегти стабільність навіть у складні часи.
+          Фінансова подушка — це ваш захисний резерв на випадок непередбачених ситуацій.  
+          Вона допомагає уникнути стресу та зберегти стабільність навіть у складні часи.
         </p>
         <h2>Ключові поради</h2>
         <ul>
-          <li>💰 Відкладай щонайменше 10-20% доходу щомісяця.</li>
-          <li>🏦 Зберігай гроші на окремому рахунку або депозиті.</li>
-          <li>📅 Мета — накопичити суму, що покриває витрати на 3-6 місяців життя.</li>
-          <li>📈 Використовуй подушку тільки для критичних випадків.</li>
+          <li>💰 Відкладай 10–20% доходу щомісяця.</li>
+          <li>🏦 Зберігай гроші на окремому рахунку чи депозиті.</li>
+          <li>📅 Мета — накопичити суму на 3–6 місяців життя.</li>
+          <li>📈 Використовуй тільки для екстрених випадків.</li>
         </ul>
         <p>
-          Наявність фінансової подушки робить вас упевненішим у завтрашньому дні і дозволяє приймати розумні фінансові рішення.
+          Міцна фінансова подушка робить тебе впевненішим та дозволяє спокійно приймати фінансові рішення.
         </p>
       </article>
     </main>
   </div>
 </body>
-</html>
+</html>h
