--- a/article1.html
+++ b/article1.html
@@ -1,30 +1,36 @@
 <!DOCTYPE html>
 <html lang="uk">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Фінансова грамотність</title>
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="style.css" />
+  <style>
+    body {background: #0e1f1d; color: #fff; font-family: Arial, sans-serif; margin: 0; padding: 0;}
+    .container {max-width: 900px; margin: auto; padding: 20px;}
+    header {text-align: center; margin-bottom: 20px;}
+    h1 {margin-bottom: 10px;}
+    .back-btn {background: #10b981; padding: 10px 20px; color: #fff; border-radius: 8px; text-decoration: none;}
+    img {width: 100%; max-height: 300px; object-fit: cover; border-radius: 12px; margin: 20px 0;}
+    p, ul {line-height: 1.6;}
+  </style>
 </head>
 <body>
   <div class="container">
     <header>
       <h1>Фінансова грамотність</h1>
-      <nav><a href="index.html">🏠 На головну</a></nav>
+      <a class="back-btn" href="index.html">🏠 На головну</a>
     </header>
-    <main>
-      <article>
-        <img src="https://images.unsplash.com/photo-1605902711622-cfb43c4437b5" alt="Фінансова грамотність">
-        <p>Фінансова грамотність — це основа стабільного майбутнього. Вона допомагає приймати правильні рішення у витратах, заощадженнях і інвестиціях.</p>
-        <ul>
-          <li>📘 Планування бюджету</li>
-          <li>💳 Розумне користування кредитами</li>
-          <li>📈 Інвестиції для створення пасивного доходу</li>
-          <li>💰 Створення фінансової подушки</li>
-        </ul>
-        <p>Фінансова грамотність забезпечує впевненість та свободу у виборі життєвого шляху.</p>
-      </article>
-    </main>
+    <img src="https://images.unsplash.com/photo-1605902711622-cfb43c4437b5?auto=format&fit=crop&w=1200&q=80" alt="Фінансова грамотність">
+    <p>Фінансова грамотність — це ключ до стабільності та впевненості у майбутньому. Люди, які розуміють принципи управління грошима, легше уникають боргів, знають, як заощаджувати та інвестувати.</p>
+    <h2>Чому це важливо:</h2>
+    <ul>
+      <li>📘 Розуміння бюджету допомагає уникнути непередбачених витрат.</li>
+      <li>🏦 Уміння зберігати кошти дає можливість створити фінансову подушку.</li>
+      <li>📈 Інвестування дозволяє збільшувати капітал та отримувати пасивний дохід.</li>
+      <li>💳 Грамотне користування кредитами допомагає уникнути боргових пасток.</li>
+    </ul>
+    <p>Фінансова грамотність дозволяє приймати обдумані рішення щодо покупок, інвестицій та економії. Це фундамент фінансової безпеки, який потрібно формувати з молодого віку. Освоївши базові знання, ви зможете планувати своє майбутнє, уникати фінансових стресів і розвивати капітал.</p>
   </div>
 </body>
 </html>
