--- a/article2.html
+++ b/article2.html
@@ -5,26 +5,31 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Як планувати бюджет ефективно</title>
   <link rel="stylesheet" href="style.css">
+  <style>
+    body {background: #0e1f1d; color: #fff; font-family: Arial, sans-serif; margin: 0; padding: 0;}
+    .container {max-width: 900px; margin: auto; padding: 20px;}
+    header {text-align: center; margin-bottom: 20px;}
+    h1 {margin-bottom: 10px;}
+    .back-btn {background: #10b981; padding: 10px 20px; color: #fff; border-radius: 8px; text-decoration: none;}
+    img {width: 100%; max-height: 300px; object-fit: cover; border-radius: 12px; margin: 20px 0;}
+    p, ul {line-height: 1.6;}
+  </style>
 </head>
 <body>
   <div class="container">
     <header>
       <h1>Як планувати бюджет ефективно</h1>
-      <nav><a href="index.html">🏠 На головну</a></nav>
+      <a class="back-btn" href="index.html">🏠 На головну</a>
     </header>
-    <main>
-      <article>
-        <img src="https://images.unsplash.com/photo-1553729459-efe14ef6055d" alt="Планування бюджету">
-        <p>Планування бюджету дозволяє чітко контролювати свої доходи та витрати, уникати фінансових криз і накопичувати гроші для важливих цілей.</p>
-        <ul>
-          <li>📝 Ведіть список усіх витрат і доходів</li>
-          <li>📊 Використовуйте правило 50/30/20 для розподілу бюджету</li>
-          <li>🎯 Визначте пріоритетні фінансові цілі</li>
-          <li>💳 Відстежуйте підписки та регулярні платежі</li>
-        </ul>
-        <p>Бюджет — це інструмент, який дає свободу та впевненість у фінансах.</p>
-      </article>
-    </main>
+    <img src="https://images.unsplash.com/photo-1553729459-efe14ef6055d?auto=format&fit=crop&w=1200&q=80" alt="Планування бюджету">
+    <p>Планування бюджету допомагає контролювати фінанси, зменшити стрес та уникнути боргів. Чіткий бюджет дозволяє розуміти, куди витрачаються ваші гроші, та створювати заощадження на важливі цілі.</p>
+    <ul>
+      <li>📒 Запишіть усі доходи та витрати, щоб знати точний баланс.</li>
+      <li>🎯 Визначте фінансові пріоритети та цілі.</li>
+      <li>💡 Використовуйте правило 50/30/20 для оптимізації витрат.</li>
+      <li>📆 Переглядайте бюджет щомісяця і коригуйте його за потреби.</li>
+    </ul>
+    <p>Регулярне планування допомагає краще керувати грошима, уникати необдуманих покупок та накопичувати кошти для великих цілей, таких як подорожі чи купівля житла.</p>
   </div>
 </body>
 </html>
