--- a/article3.html
+++ b/article3.html
@@ -5,26 +5,31 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Інвестування для початківців</title>
   <link rel="stylesheet" href="style.css">
+  <style>
+    body {background: #0e1f1d; color: #fff; font-family: Arial, sans-serif; margin: 0; padding: 0;}
+    .container {max-width: 900px; margin: auto; padding: 20px;}
+    header {text-align: center; margin-bottom: 20px;}
+    h1 {margin-bottom: 10px;}
+    .back-btn {background: #10b981; padding: 10px 20px; color: #fff; border-radius: 8px; text-decoration: none;}
+    img {width: 100%; max-height: 300px; object-fit: cover; border-radius: 12px; margin: 20px 0;}
+    p, ul {line-height: 1.6;}
+  </style>
 </head>
 <body>
   <div class="container">
     <header>
       <h1>Інвестування для початківців</h1>
-      <nav><a href="index.html">🏠 На головну</a></nav>
+      <a class="back-btn" href="index.html">🏠 На головну</a>
     </header>
-    <main>
-      <article>
-        <img src="https://images.unsplash.com/photo-1581092580497-e0d23cbdf1dc" alt="Інвестування">
-        <p>Інвестування — ключ до створення пасивного доходу та фінансової стабільності. Почати можна навіть з невеликих сум.</p>
-        <ul>
-          <li>📖 Вивчайте ринок та інструменти інвестування</li>
-          <li>💵 Починайте з малих інвестицій для зниження ризиків</li>
-          <li>📈 Диверсифікуйте інвестиційний портфель</li>
-          <li>⏳ Думайте довгостроково, а не про швидкий прибуток</li>
-        </ul>
-        <p>Інвестування — це інструмент збереження та примноження капіталу, який доступний кожному.</p>
-      </article>
-    </main>
+    <img src="https://images.unsplash.com/photo-1581092795360-fd1ca04f0952?auto=format&fit=crop&w=1200&q=80" alt="Інвестування">
+    <p>Інвестування дозволяє створювати пасивний дохід та забезпечувати фінансову стабільність у майбутньому. Навіть невеликі суми, інвестовані регулярно, можуть принести значний прибуток завдяки складним відсоткам.</p>
+    <ul>
+      <li>📚 Почніть з вивчення базових фінансових інструментів.</li>
+      <li>💵 Інвестуйте невеликі суми, щоб мінімізувати ризики на старті.</li>
+      <li>📊 Диверсифікуйте свій портфель: не інвестуйте все в один актив.</li>
+      <li>⏳ Дотримуйтесь довгострокової стратегії, щоб уникнути емоційних рішень.</li>
+    </ul>
+    <p>Інвестиції допомагають не лише зберегти, а й примножити капітал. Головне — дисципліна, аналіз і розуміння ризиків.</p>
   </div>
 </body>
 </html>
