--- a/article4.html
+++ b/article4.html
@@ -5,33 +5,30 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Фінансова подушка</title>
   <link rel="stylesheet" href="style.css">
+  <style>
+    body {background: #0e1f1d; color: #fff; font-family: Arial, sans-serif; margin: 0; padding: 0;}
+    .container {max-width: 900px; margin: auto; padding: 20px;}
+    header {text-align: center; margin-bottom: 20px;}
+    h1 {margin-bottom: 10px;}
+    .back-btn {background: #10b981; padding: 10px 20px; color: #fff; border-radius: 8px; text-decoration: none;}
+    img {width: 100%; max-height: 300px; object-fit: cover; border-radius: 12px; margin: 20px 0;}
+    p, ul {line-height: 1.6;}
+  </style>
 </head>
 <body>
   <div class="container">
     <header>
       <h1>Фінансова подушка</h1>
-      <nav><a href="index.html">🏠 На головну</a></nav>
+      <a class="back-btn" href="index.html">🏠 На головну</a>
     </header>
-
-    <main>
-      <article>
-        <img src="https://images.unsplash.com/photo-1580519542036-c47de6196ba5?q=80&w=1200" alt="Фінансова подушка">
-        <p>
-          Фінансова подушка — це ваш захисний резерв на випадок непередбачених ситуацій.  
-          Вона допомагає уникнути стресу та зберегти стабільність навіть у складні часи.
-        </p>
-        <h2>Ключові поради</h2>
-        <ul>
-          <li>💰 Відкладай 10–20% доходу щомісяця.</li>
-          <li>🏦 Зберігай гроші на окремому рахунку чи депозиті.</li>
-          <li>📅 Мета — накопичити суму на 3–6 місяців життя.</li>
-          <li>📈 Використовуй тільки для екстрених випадків.</li>
-        </ul>
-        <p>
-          Міцна фінансова подушка робить тебе впевненішим та дозволяє спокійно приймати фінансові рішення.
-        </p>
-      </article>
-    </main>
+    <img src="https://images.unsplash.com/photo-1553729459-efe14ef6055d?auto=format&fit=crop&w=1200&q=80" alt="Фінансова подушка">
+    <p>Фінансова подушка — це резерв грошей на непередбачувані витрати: втрата роботи, хвороба чи інші форс-мажори. Вона дає впевненість та спокій навіть у кризові часи.</p>
+    <ul>
+      <li>💰 Відкладай 10-20% доходу щомісяця на окремий рахунок.</li>
+      <li>📅 Створи резерв хоча б на 3-6 місяців витрат.</li>
+      <li>🏦 Гроші тримай у легкодоступному, але надійному місці (депозит, окремий рахунок).</li>
+    </ul>
+    <p>Фінансова подушка — це перший крок до фінансової незалежності. Вона дозволяє уникнути боргів і зберігати спокій у будь-яких обставинах.</p>
   </div>
 </body>
-</html>h
+</html>
