--- a/article5.html
+++ b/article5.html
@@ -5,26 +5,31 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Топ поради для економії грошей</title>
   <link rel="stylesheet" href="style.css">
+  <style>
+    body {background: #0e1f1d; color: #fff; font-family: Arial, sans-serif; margin: 0; padding: 0;}
+    .container {max-width: 900px; margin: auto; padding: 20px;}
+    header {text-align: center; margin-bottom: 20px;}
+    h1 {margin-bottom: 10px;}
+    .back-btn {background: #10b981; padding: 10px 20px; color: #fff; border-radius: 8px; text-decoration: none;}
+    img {width: 100%; max-height: 300px; object-fit: cover; border-radius: 12px; margin: 20px 0;}
+    p, ul {line-height: 1.6;}
+  </style>
 </head>
 <body>
   <div class="container">
     <header>
       <h1>Топ поради для економії грошей</h1>
-      <nav><a href="index.html">🏠 На головну</a></nav>
+      <a class="back-btn" href="index.html">🏠 На головну</a>
     </header>
-    <main>
-      <article>
-        <img src="https://images.unsplash.com/photo-1605902711622-cfb43c4437b5" alt="Економія грошей">
-        <p>Економія — це не про відмови, а про раціональне використання грошей і можливостей для заощадження.</p>
-        <ul>
-          <li>🛒 Купуйте тільки необхідне та плануйте покупки</li>
-          <li>📅 Слідкуйте за акціями та знижками</li>
-          <li>🍳 Готуйте вдома — це дешевше та корисніше</li>
-          <li>💡 Скоротіть комунальні витрати через енергоефективність</li>
-        </ul>
-        <p>Правильна економія дозволяє жити комфортно та мати більше грошей для цілей і відпочинку.</p>
-      </article>
-    </main>
+    <img src="https://images.unsplash.com/photo-1591696331119-85889d94b579?auto=format&fit=crop&w=1200&q=80" alt="Економія грошей">
+    <p>Економія грошей не означає відмову від усього. Це мистецтво раціональних витрат, яке допомагає уникнути фінансових проблем і накопичувати кошти на великі цілі.</p>
+    <ul>
+      <li>🛒 Плануйте покупки заздалегідь і складайте список.</li>
+      <li>💳 Уникайте імпульсивних витрат.</li>
+      <li>📦 Купуйте товари на акціях та розпродажах.</li>
+      <li>⚡ Оптимізуйте витрати на комунальні послуги та підписки.</li>
+    </ul>
+    <p>Економія дозволяє виділяти кошти на важливі речі та формувати капітал. Система невеликих змін у витратах допоможе з часом накопичити значні ресурси без шкоди для рівня життя.</p>
   </div>
 </body>
 </html>
