--- a/article5.html
+++ b/article5.html
@@ -7,92 +7,84 @@
   <link rel="stylesheet" href="style.css">
   <style>
     body {
-      background-color: #0f1c1f;
-      color: #fff;
+      background-color: #0f1a17;
+      color: #f5f5f5;
       font-family: Arial, sans-serif;
       margin: 0;
       padding: 0;
+      line-height: 1.6;
+    }
+
+    .container {
+      width: 90%;
+      max-width: 900px;
+      margin: 0 auto;
+      padding: 20px;
     }
 
     header {
       text-align: center;
-      padding: 20px;
-      background: linear-gradient(to right, #0b3d3f, #1f4037);
+      margin-bottom: 20px;
     }
 
     header h1 {
-      margin: 0;
-      font-size: 28px;
+      font-size: 2rem;
+      color: #fff;
     }
 
-    .btn-home {
+    nav a {
       display: inline-block;
       margin-top: 10px;
       padding: 10px 20px;
-      background: #28a745;
+      background: #00b359;
       color: #fff;
-      border-radius: 8px;
       text-decoration: none;
+      border-radius: 25px;
       font-weight: bold;
       transition: 0.3s;
     }
 
-    .btn-home:hover {
-      background: #218838;
+    nav a:hover {
+      background: #008f47;
     }
 
-    img {
+    article img {
       width: 100%;
-      height: auto;
-      display: block;
-      margin: 20px auto;
-      border-radius: 12px;
-    }
-
-    main {
-      padding: 20px;
-      max-width: 800px;
-      margin: 0 auto;
-    }
-
-    h2 {
-      margin-top: 20px;
-      color: #00ffcc;
+      max-height: 300px;
+      object-fit: cover;
+      border-radius: 10px;
+      margin-bottom: 20px;
     }
 
     ul {
       padding-left: 20px;
-      line-height: 1.8;
     }
 
-    p {
-      line-height: 1.6;
+    ul li {
+      margin: 10px 0;
     }
   </style>
 </head>
 <body>
-  <header>
-    <h1>Топ поради для економії грошей</h1>
-    <a href="index.html" class="btn-home">🏠 На головну</a>
-  </header>
-
-  <main>
-    <img src="https://images.unsplash.com/photo-1565373676488-04f0ef1bda52" 
-         alt="Економія грошей">
-
-    <p>Економія грошей — це не про обмеження, а про розумне управління своїми фінансами. Вона допомагає уникнути боргів, створити фінансову подушку та інвестувати у своє майбутнє.</p>
-
-    <h2>Практичні поради:</h2>
-    <ul>
-      <li>🛒 Купуйте лише те, що вам дійсно потрібно.</li>
-      <li>📝 Ведіть список покупок перед походом у магазин.</li>
-      <li>💳 Уникайте імпульсивних витрат та плануйте покупки наперед.</li>
-      <li>🏦 Відкладайте мінімум 10% доходу щомісяця.</li>
-      <li>📊 Використовуйте застосунки для контролю бюджету та витрат.</li>
-      <li>🎯 Ставте чіткі фінансові цілі: накопичення на подорож, інвестиції або подушку безпеки.</li>
-    </ul>
-
-    <p>Ці прості кроки допоможуть вам підвищити фінансову грамотність та відчути впевненість у завтрашньому дні.</p>
-  </main>
+  <div class="container">
+    <header>
+      <h1>Топ поради для економії грошей</h1>
+      <nav><a href="index.html">🏠 На головну</a></nav>
+    </header>
+    <main>
+      <article>
+        <img src="https://images.unsplash.com/photo-1581090700227-4c4f50b8d1f8?ixlib=rb-4.0.3&auto=format&fit=crop&w=1400&q=80" alt="Економія грошей">
+        <p>Економія грошей не означає відмову від усього. Це мистецтво раціональних витрат, яке допомагає уникнути фінансових проблем і накопичувати кошти на важливі цілі.</p>
+        <ul>
+          <li>🛒 Плануйте покупки заздалегідь і складайте список.</li>
+          <li>💳 Уникайте імпульсивних витрат.</li>
+          <li>📦 Купуйте товари на акціях та розпродажах.</li>
+          <li>⚡ Оптимізуйте витрати на комунальні послуги та підписки.</li>
+          <li>💡 Відкладіть хоча б 10% доходу щомісяця.</li>
+        </ul>
+        <p>Економія дозволяє виділяти кошти на важливі речі та формувати капітал. Система невеликих змін у витратах допоможе з часом накопичити значні ресурси без шкоди для рівня життя.</p>
+      </article>
+    </main>
+  </div>
 </body>
 </html>
