--- a/article5.html
+++ b/article5.html
@@ -73,7 +73,7 @@
     </header>
     <main>
       <article>
-        <img src="https://images.unsplash.com/photo-1581090700227-4c4f50b8d1f8?ixlib=rb-4.0.3&auto=format&fit=crop&w=1400&q=80" alt="Економія грошей">
+        <img src="https://raw.githubusercontent.com/Hnidets523/My-finance-/refs/heads/main/images/7FE9FEDC-8BC7-4E54-925F-D7FFCAA05274.png" alt="Економія грошей">
         <p>Економія грошей не означає відмову від усього. Це мистецтво раціональних витрат, яке допомагає уникнути фінансових проблем і накопичувати кошти на важливі цілі.</p>
         <ul>
           <li>🛒 Плануйте покупки заздалегідь і складайте список.</li>
