--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
         </div>
       </article>
 
-      <!-- 4 (була проблема з картинкою — даю інше стабільне фото) -->
+      <!-- 4 -->
       <article class="card">
         <div class="media" style="background-image:url('https://images.unsplash.com/photo-1553729459-efe14ef6055d?auto=format&fit=crop&w=900&q=80');"></div>
         <div class="content">
@@ -172,9 +172,9 @@
         </div>
       </article>
 
-      <!-- 5 -->
+      <!-- 5 (оновлено) -->
       <article class="card">
-        <div class="media" style="background-image:url('https://images.unsplash.com/photo-1591696331119-85889d94b579?auto=format&fit=crop&w=900&q=80');"></div>
+        <div class="media" style="background-image:url('https://raw.githubusercontent.com/Hnidets523/My-finance-/refs/heads/main/images/7FE9FEDC-8BC7-4E54-925F-D7FFCAA05274.png');"></div>
         <div class="content">
           <h3>Топ поради для економії грошей</h3>
           <p>Лайфхаки, як економити і не втрачати якість життя.</p>
