--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+!DOCTYPE html>
 <html lang="uk">
 <head>
   <meta charset="UTF-8" />
@@ -27,162 +27,4 @@
       font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Arial, sans-serif;
       background:
         radial-gradient(1200px 600px at 20% 0%, #1f3a38 0%, transparent 60%),
-        radial-gradient(900px 500px at 100% -10%, #13302d 0%, transparent 60%),
-        var(--bg-dark);
-      color: #fff;
-    }
-
-    /* HERO */
-    .home .hero{
-      padding: 36px 16px 8px;
-      background: linear-gradient(180deg, var(--bg-hero), transparent);
-      text-align: center;
-    }
-    .home .hero h1{
-      margin: 0 0 8px;
-      font-size: clamp(28px, 6vw, 44px);
-      font-weight: 800;
-      letter-spacing: .5px;
-    }
-    .home .hero p{
-      margin: 0 auto 8px;
-      max-width: 800px;
-      color: #d7e3e1;
-      font-size: clamp(14px, 2.8vw, 18px);
-      line-height: 1.5;
-    }
-
-    /* GRID КАРТОК */
-    .home .wrap{max-width: 1100px; margin: 0 auto; padding: 10px 14px 40px;}
-    .home .cards{
-      display: grid;
-      grid-template-columns: repeat(2, minmax(0,1fr)); /* 2 в ряд на мобайлі */
-      gap: 14px;
-    }
-    @media (min-width: 900px){
-      .home .cards{ grid-template-columns: repeat(3, minmax(0,1fr)); } /* 3 в ряд на десктопі */
-    }
-
-    /* КАРТКА */
-    .home .card{
-      display: flex; flex-direction: column; align-items: center;
-      background: var(--card-bg); color: var(--text-dark);
-      border-radius: var(--radius-lg);
-      box-shadow: var(--shadow);
-      overflow: hidden;
-      transition: transform .18s ease, box-shadow .18s ease;
-      min-height: 320px; /* компактно: півекрана/менше */
-    }
-    .home .card:hover{ transform: translateY(-4px); box-shadow: 0 16px 36px rgba(0,0,0,.28); }
-
-    .home .card .media{
-      width: 100%;
-      height: 120px;                 /* невелика шапка-картинка */
-      background-size: cover;
-      background-position: center;
-    }
-
-    .home .card .content{
-      padding: 14px 14px 18px;
-      width: 100%;
-      text-align: center;
-      display: grid;
-      gap: 8px;
-    }
-    .home .card h3{
-      margin: 0;
-      font-size: clamp(16px, 3.8vw, 18px);
-      font-weight: 800;
-      line-height: 1.3;
-    }
-    .home .card p{
-      margin: 0 auto;
-      color: var(--text-muted);
-      font-size: 14px;
-      line-height: 1.45;
-      display: -webkit-box;          /* акуратне обрізання на 2 рядки */
-      -webkit-line-clamp: 2;
-      -webkit-box-orient: vertical;
-      overflow: hidden;
-      max-width: 90%;
-    }
-
-    .home .btn{
-      display: inline-block;
-      margin: 6px auto 2px;
-      padding: 10px 18px;
-      background: var(--btn);
-      color: #fff; text-decoration: none; font-weight: 700;
-      border-radius: 999px;
-      box-shadow: 0 6px 16px rgba(16,185,129,.35);
-      transition: background .18s ease, transform .18s ease, box-shadow .18s ease;
-    }
-    .home .btn:hover{ background: var(--btn-hover); transform: translateY(-1px); box-shadow: 0 10px 22px rgba(16,185,129,.45); }
-  </style>
-</head>
-
-<body class="home">
-  <!-- HERO -->
-  <header class="hero">
-    <h1>Фінансовий блог</h1>
-    <p>Поради про фінанси, інвестиції, економію та стабільність</p>
-  </header>
-
-  <!-- КАРТКИ -->
-  <main class="wrap">
-    <section class="cards">
-
-      <!-- 1 -->
-      <article class="card">
-        <div class="media" style="background-image:url('https://images.unsplash.com/photo-1605902711622-cfb43c4437b5?auto=format&fit=crop&w=900&q=80');"></div>
-        <div class="content">
-          <h3>Фінансова грамотність</h3>
-          <p>Розберіться, як працюють гроші, щоб жити впевнено та вільно.</p>
-          <a class="btn" href="article1.html">Читати</a>
-        </div>
-      </article>
-
-      <!-- 2 -->
-      <article class="card">
-        <div class="media" style="background-image:url('https://images.unsplash.com/photo-1553729459-efe14ef6055d?auto=format&fit=crop&w=900&q=80');"></div>
-        <div class="content">
-          <h3>Як планувати бюджет ефективно</h3>
-          <p>Навчіться правильно розподіляти витрати та створити фінансову дисципліну.</p>
-          <a class="btn" href="article2.html">Читати</a>
-        </div>
-      </article>
-
-      <!-- 3 -->
-      <article class="card">
-        <div class="media" style="background-image:url('https://images.unsplash.com/photo-1581092795360-fd1ca04f0952?auto=format&fit=crop&w=900&q=80');"></div>
-        <div class="content">
-          <h3>Інвестування для початківців</h3>
-          <p>Почніть інвестувати без великих ризиків і з розумінням інструментів.</p>
-          <a class="btn" href="article3.html">Читати</a>
-        </div>
-      </article>
-
-      <!-- 4 -->
-      <article class="card">
-        <div class="media" style="background-image:url('https://images.unsplash.com/photo-1553729459-efe14ef6055d?auto=format&fit=crop&w=900&q=80');"></div>
-        <div class="content">
-          <h3>Фінансова подушка</h3>
-          <p>Стратегія фінансового захисту для будь-кого.</p>
-          <a class="btn" href="article4.html">Читати</a>
-        </div>
-      </article>
-
-      <!-- 5 (оновлено) -->
-      <article class="card">
-        <div class="media" style="background-image:url('https://raw.githubusercontent.com/Hnidets523/My-finance-/refs/heads/main/images/7FE9FEDC-8BC7-4E54-925F-D7FFCAA05274.png');"></div>
-        <div class="content">
-          <h3>Топ поради для економії грошей</h3>
-          <p>Лайфхаки, як економити і не втрачати якість життя.</p>
-          <a class="btn" href="article5.html">Читати</a>
-        </div>
-      </article>
-
-    </section>
-  </main>
-</body>
-</html>
+        radial-gr
