--- a/index.html
+++ b/index.html
@@ -1,30 +1,185 @@
-!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="uk">
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Фінансовий блог</title>
-  <!-- Твій існуючий файл стилів для статей НЕ чіпаємо -->
   <link rel="stylesheet" href="style.css">
-
-  <!-- Стилі лише для головної (із префіксом .home, щоб не ламати сторінки статей) -->
   <style>
-    :root{
+    :root {
       --bg-dark: #0e1f1d;
       --bg-hero: #183836;
       --card-bg: #ffffff;
       --text-dark: #101414;
       --text-muted: #5b6664;
-      --btn: #10b981;      /* зелена кнопка */
+      --btn: #10b981;
       --btn-hover: #0e9f6e;
       --radius-lg: 18px;
-      --radius-md: 12px;
-      --shadow: 0 12px 28px rgba(0,0,0,.25);
+      --shadow: 0 8px 20px rgba(0,0,0,.25);
     }
 
     body.home {
       margin: 0;
       font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Arial, sans-serif;
-      background:
-        radial-gradient(1200px 600px at 20% 0%, #1f3a38 0%, transparent 60%),
-        radial-gr
+      background: var(--bg-dark);
+      color: #fff;
+    }
+
+    /* HERO */
+    .hero {
+      padding: 32px 16px 12px;
+      background: linear-gradient(180deg, var(--bg-hero), transparent);
+      text-align: center;
+    }
+    .hero h1 {
+      margin: 0 0 8px;
+      font-size: clamp(26px, 6vw, 40px);
+      font-weight: 800;
+    }
+    .hero p {
+      margin: 0 auto;
+      max-width: 700px;
+      color: #d7e3e1;
+      font-size: 16px;
+      line-height: 1.4;
+    }
+
+    /* GRID КАРТОК */
+    .wrap {
+      max-width: 1100px;
+      margin: 0 auto;
+      padding: 10px 14px 40px;
+    }
+    .cards {
+      display: grid;
+      grid-template-columns: repeat(3, 1fr);
+      gap: 14px;
+    }
+    @media (max-width: 768px) {
+      .cards {
+        grid-template-columns: 1fr;
+      }
+    }
+
+    /* КАРТКА */
+    .card {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      background: var(--card-bg);
+      color: var(--text-dark);
+      border-radius: var(--radius-lg);
+      box-shadow: var(--shadow);
+      overflow: hidden;
+      transition: transform .18s ease, box-shadow .18s ease;
+    }
+    .card:hover {
+      transform: translateY(-4px);
+      box-shadow: 0 12px 28px rgba(0,0,0,.3);
+    }
+
+    .card .media {
+      width: 100%;
+      height: 140px;
+      background-size: cover;
+      background-position: center;
+    }
+
+    .card .content {
+      padding: 14px;
+      text-align: center;
+    }
+    .card h3 {
+      margin: 0 0 6px;
+      font-size: 18px;
+      font-weight: 800;
+    }
+    .card p {
+      margin: 0 auto 12px;
+      color: var(--text-muted);
+      font-size: 14px;
+      line-height: 1.4;
+    }
+
+    .btn {
+      display: inline-block;
+      margin-top: 4px;
+      padding: 8px 18px;
+      background: var(--btn);
+      color: #fff;
+      font-weight: 700;
+      text-decoration: none;
+      border-radius: 999px;
+      transition: background .18s ease;
+    }
+    .btn:hover {
+      background: var(--btn-hover);
+    }
+  </style>
+</head>
+
+<body class="home">
+  <!-- HERO -->
+  <header class="hero">
+    <h1>Фінансовий блог</h1>
+    <p>Поради про фінанси, інвестиції, економію та стабільність</p>
+  </header>
+
+  <!-- КАРТКИ -->
+  <main class="wrap">
+    <section class="cards">
+
+      <!-- 1 -->
+      <article class="card">
+        <div class="media" style="background-image:url('https://images.unsplash.com/photo-1605902711622-cfb43c4437b5?auto=format&fit=crop&w=900&q=80');"></div>
+        <div class="content">
+          <h3>Фінансова грамотність</h3>
+          <p>Розберіться, як працюють гроші, щоб жити впевнено та вільно.</p>
+          <a class="btn" href="article1.html">Читати</a>
+        </div>
+      </article>
+
+      <!-- 2 -->
+      <article class="card">
+        <div class="media" style="background-image:url('https://images.unsplash.com/photo-1553729459-efe14ef6055d?auto=format&fit=crop&w=900&q=80');"></div>
+        <div class="content">
+          <h3>Як планувати бюджет ефективно</h3>
+          <p>Навчіться правильно розподіляти витрати та створити фінансову дисципліну.</p>
+          <a class="btn" href="article2.html">Читати</a>
+        </div>
+      </article>
+
+      <!-- 3 -->
+      <article class="card">
+        <div class="media" style="background-image:url('https://images.unsplash.com/photo-1581092795360-fd1ca04f0952?auto=format&fit=crop&w=900&q=80');"></div>
+        <div class="content">
+          <h3>Інвестування для початківців</h3>
+          <p>Почніть інвестувати без великих ризиків і з розумінням інструментів.</p>
+          <a class="btn" href="article3.html">Читати</a>
+        </div>
+      </article>
+
+      <!-- 4 -->
+      <article class="card">
+        <div class="media" style="background-image:url('https://images.unsplash.com/photo-1553729459-efe14ef6055d?auto=format&fit=crop&w=900&q=80');"></div>
+        <div class="content">
+          <h3>Фінансова подушка</h3>
+          <p>Стратегія фінансового захисту для будь-кого.</p>
+          <a class="btn" href="article4.html">Читати</a>
+        </div>
+      </article>
+
+      <!-- 5 -->
+      <article class="card">
+        <div class="media" style="background-image:url('https://raw.githubusercontent.com/Hnidets523/My-finance-/refs/heads/main/images/7FE9FEDC-8BC7-4E54-925F-D7FFCAA05274.png');"></div>
+        <div class="content">
+          <h3>Топ поради для економії грошей</h3>
+          <p>Лайфхаки, як економити і не втрачати якість життя.</p>
+          <a class="btn" href="article5.html">Читати</a>
+        </div>
+      </article>
+
+    </section>
+  </main>
+</body>
+</html>
