--- a/index.html
+++ b/index.html
@@ -5,8 +5,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Фінансовий блог</title>
   <link rel="stylesheet" href="style.css">
+
   <style>
-    :root {
+    :root{
       --bg-dark: #0e1f1d;
       --bg-hero: #183836;
       --card-bg: #ffffff;
@@ -14,8 +15,8 @@
       --text-muted: #5b6664;
       --btn: #10b981;
       --btn-hover: #0e9f6e;
-      --radius-lg: 18px;
-      --shadow: 0 8px 20px rgba(0,0,0,.25);
+      --radius-lg: 14px;
+      --shadow: 0 6px 16px rgba(0,0,0,.2);
     }
 
     body.home {
@@ -26,95 +27,78 @@
     }
 
     /* HERO */
-    .hero {
-      padding: 32px 16px 12px;
+    .home .hero{
+      padding: 20px 12px;
       background: linear-gradient(180deg, var(--bg-hero), transparent);
       text-align: center;
     }
-    .hero h1 {
-      margin: 0 0 8px;
-      font-size: clamp(26px, 6vw, 40px);
+    .home .hero h1{
+      margin: 0 0 6px;
+      font-size: 26px;
       font-weight: 800;
     }
-    .hero p {
-      margin: 0 auto;
-      max-width: 700px;
+    .home .hero p{
+      margin: 0;
+      font-size: 14px;
       color: #d7e3e1;
-      font-size: 16px;
-      line-height: 1.4;
     }
 
-    /* GRID КАРТОК */
-    .wrap {
-      max-width: 1100px;
-      margin: 0 auto;
-      padding: 10px 14px 40px;
-    }
-    .cards {
+    /* GRID */
+    .home .wrap{max-width: 1000px; margin: 0 auto; padding: 10px 12px 30px;}
+    .home .cards{
       display: grid;
-      grid-template-columns: repeat(3, 1fr);
-      gap: 14px;
+      grid-template-columns: repeat(2, 1fr);
+      gap: 12px;
     }
-    @media (max-width: 768px) {
-      .cards {
-        grid-template-columns: 1fr;
-      }
+    @media (min-width: 900px){
+      .home .cards{ grid-template-columns: repeat(3, 1fr); }
     }
 
     /* КАРТКА */
-    .card {
-      display: flex;
-      flex-direction: column;
-      align-items: center;
+    .home .card{
       background: var(--card-bg);
       color: var(--text-dark);
       border-radius: var(--radius-lg);
       box-shadow: var(--shadow);
       overflow: hidden;
-      transition: transform .18s ease, box-shadow .18s ease;
+      transition: transform .18s ease;
     }
-    .card:hover {
-      transform: translateY(-4px);
-      box-shadow: 0 12px 28px rgba(0,0,0,.3);
-    }
+    .home .card:hover{ transform: translateY(-3px); }
 
-    .card .media {
+    .home .card .media{
       width: 100%;
-      height: 140px;
+      height: 100px; /* 🔥 зменшили */
       background-size: cover;
       background-position: center;
     }
 
-    .card .content {
-      padding: 14px;
+    .home .card .content{
+      padding: 12px 10px 14px;
       text-align: center;
     }
-    .card h3 {
-      margin: 0 0 6px;
-      font-size: 18px;
-      font-weight: 800;
+    .home .card h3{
+      margin: 0 0 4px;
+      font-size: 15px;
+      font-weight: 700;
     }
-    .card p {
-      margin: 0 auto 12px;
+    .home .card p{
+      margin: 0 0 10px;
+      font-size: 13px;
       color: var(--text-muted);
-      font-size: 14px;
       line-height: 1.4;
     }
 
-    .btn {
+    .home .btn{
       display: inline-block;
-      margin-top: 4px;
-      padding: 8px 18px;
+      padding: 8px 16px;
       background: var(--btn);
       color: #fff;
-      font-weight: 700;
-      text-decoration: none;
+      font-size: 13px;
+      font-weight: 600;
       border-radius: 999px;
-      transition: background .18s ease;
+      text-decoration: none;
     }
-    .btn:hover {
-      background: var(--btn-hover);
-    }
+    .home .btn:hover{ background: var(--btn-hover); }
   </style>
 </head>
 
