--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
       --text-muted: #5b6664;
       --btn: #10b981;
       --btn-hover: #0e9f6e;
-      --radius-lg: 14px;
-      --shadow: 0 6px 16px rgba(0,0,0,.2);
+      --radius-lg: 12px;
+      --shadow: 0 4px 12px rgba(0,0,0,.2);
     }
 
     body.home {
@@ -28,34 +28,34 @@
 
     /* HERO */
     .home .hero{
-      padding: 20px 12px;
+      padding: 18px 12px;
       background: linear-gradient(180deg, var(--bg-hero), transparent);
       text-align: center;
     }
     .home .hero h1{
-      margin: 0 0 6px;
-      font-size: 26px;
+      margin: 0 0 4px;
+      font-size: 22px;
       font-weight: 800;
     }
     .home .hero p{
       margin: 0;
-      font-size: 14px;
+      font-size: 13px;
       color: #d7e3e1;
     }
 
     /* GRID */
-    .home .wrap{max-width: 1000px; margin: 0 auto; padding: 10px 12px 30px;}
+    .home .wrap{max-width: 1000px; margin: 0 auto; padding: 10px 10px 30px;}
     .home .cards{
       display: grid;
-      grid-template-columns: repeat(2, 1fr);
-      gap: 12px;
-    }
-    @media (min-width: 900px){
-      .home .cards{ grid-template-columns: repeat(3, 1fr); }
+      grid-template-columns: repeat(3, 1fr); /* завжди 3 в ряд */
+      gap: 10px;
+      justify-items: center; /* центрує останній ряд */
     }
 
     /* КАРТКА */
     .home .card{
+      width: 100%;
+      max-width: 220px; /* 🔥 зменшено */
       background: var(--card-bg);
       color: var(--text-dark);
       border-radius: var(--radius-lg);
@@ -63,37 +63,37 @@
       overflow: hidden;
       transition: transform .18s ease;
     }
-    .home .card:hover{ transform: translateY(-3px); }
+    .home .card:hover{ transform: translateY(-2px); }
 
     .home .card .media{
       width: 100%;
-      height: 100px; /* 🔥 зменшили */
+      height: 80px; /* 🔥 менше фото */
       background-size: cover;
       background-position: center;
     }
 
     .home .card .content{
-      padding: 12px 10px 14px;
+      padding: 10px 8px 12px;
       text-align: center;
     }
     .home .card h3{
       margin: 0 0 4px;
-      font-size: 15px;
+      font-size: 14px;
       font-weight: 700;
     }
     .home .card p{
-      margin: 0 0 10px;
-      font-size: 13px;
+      margin: 0 0 8px;
+      font-size: 12px;
       color: var(--text-muted);
-      line-height: 1.4;
+      line-height: 1.3;
     }
 
     .home .btn{
       display: inline-block;
-      padding: 8px 16px;
+      padding: 6px 14px;
       background: var(--btn);
       color: #fff;
-      font-size: 13px;
+      font-size: 12px;
       font-weight: 600;
       border-radius: 999px;
       text-decoration: none;
