--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       --btn: #10b981;
       --btn-hover: #0e9f6e;
       --radius-lg: 14px;
-      --shadow: 0 6px 14px rgba(0,0,0,.18);
+      --shadow: 0 4px 10px rgba(0,0,0,.18);
     }
 
     body.home {
@@ -28,33 +28,33 @@
 
     /* HERO */
     .home .hero{
-      padding: 28px 16px 8px;
+      padding: 20px 16px 8px;
       background: linear-gradient(180deg, var(--bg-hero), transparent);
       text-align: center;
     }
     .home .hero h1{
       margin: 0 0 8px;
-      font-size: clamp(26px, 6vw, 38px);
+      font-size: clamp(22px, 6vw, 34px);
       font-weight: 800;
     }
     .home .hero p{
       margin: 0 auto 8px;
       max-width: 800px;
       color: #d7e3e1;
-      font-size: clamp(14px, 2.8vw, 17px);
+      font-size: clamp(13px, 2.8vw, 16px);
     }
 
     /* GRID */
     .home .wrap{
-      max-width: 1000px;
+      max-width: 900px;
       margin: 0 auto;
-      padding: 10px 14px 40px;
+      padding: 10px 14px 30px;
     }
 
     .home .cards{
       display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(140px, 1fr));
-      gap: 14px;
+      grid-template-columns: repeat(3, 1fr);
+      gap: 12px;
       justify-items: center;
     }
 
@@ -62,43 +62,42 @@
     .home .card{
       display: flex;
       flex-direction: column;
-      justify-content: space-between;
       background: var(--card-bg);
       color: var(--text-dark);
       border-radius: var(--radius-lg);
       box-shadow: var(--shadow);
       overflow: hidden;
-      transition: transform .18s ease, box-shadow .18s ease;
       border: 1px solid #ddd;
       width: 100%;
-      max-width: 200px;  /* компактніші */
-      min-height: 230px; /* всі однакові */
+      max-width: 160px;   /* ширина менша */
+      min-height: 200px;  /* компактніше */
+      transition: transform .18s ease, box-shadow .18s ease;
     }
-    .home .card:hover{ transform: translateY(-4px); box-shadow: 0 10px 20px rgba(0,0,0,.25); }
+    .home .card:hover{ transform: translateY(-3px); box-shadow: 0 8px 18px rgba(0,0,0,.25); }
 
     .home .card .media{
       width: 100%;
-      height: 90px;
+      height: 70px;
       background-size: cover;
       background-position: center;
     }
 
     .home .card .content{
-      padding: 10px 12px 14px;
+      padding: 8px 10px 12px;
       text-align: center;
       display: grid;
-      gap: 6px;
+      gap: 4px;
     }
     .home .card h3{
       margin: 0;
-      font-size: 14px;
-      font-weight: 800;
+      font-size: 13px;
+      font-weight: 700;
       line-height: 1.2;
     }
     .home .card p{
       margin: 0 auto;
       color: var(--text-muted);
-      font-size: 12px;
+      font-size: 11px;
       line-height: 1.3;
       display: -webkit-box;
       -webkit-line-clamp: 2;
@@ -108,13 +107,13 @@
 
     .home .btn{
       display: inline-block;
-      margin: 6px auto 2px;
-      padding: 6px 14px;
+      margin: 6px auto 0;
+      padding: 5px 12px;
       background: var(--btn);
       color: #fff;
       text-decoration: none;
       font-weight: 700;
-      font-size: 13px;
+      font-size: 12px;
       border-radius: 999px;
       transition: background .18s ease, transform .18s ease;
     }
@@ -148,7 +147,7 @@
         <div class="media" style="background-image:url('https://images.unsplash.com/photo-1553729459-efe14ef6055d?auto=format&fit=crop&w=900&q=80');"></div>
         <div class="content">
           <h3>Як планувати бюджет</h3>
-          <p>Навчіться правильно розподіляти витрати та створити дисципліну.</p>
+          <p>Навчіться правильно розподіляти витрати.</p>
           <a class="btn" href="article2.html">Читати</a>
         </div>
       </article>
